# wiz-viewer

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
